# mydata-agent

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  run_test.sh  run_uvicorn.sh
app/: main.py
app/chain/: __init__.py  abstract_chain.py  open_ai.py  openai.py
app/conf/: log_conf.py
app/mock_db/: api.py
app/prompt/: en.py
app/routers/: chatrooms.py
app/routers/v1/: chatrooms.py
app/settings/base/: KEY_CONF.py
app/settings/dev/: KEY_CONF.py
app/settings/prod/: KEY_CONF.py
app/tests/: test_api.py  test_faiss.py  test_unit_funcion.py
app/tests/chain/: test_open_ai.py  test_openai.py
app/tests/vector_store/: test_faiss.py
app/utils/: enums.py  exception.py  key_conf.py
app/vector_store/: __init__.py  abstract_store.py  faiss.py
