[tool.poetry]
name = "mydata-agent"
version = "0.1.0"
description = ""
authors = ["gw <geunwoo.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pydantic = "^2.8.2"
langchain = "^0.2.13"
langchain-openai = "^0.1.21"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
