[tool.poetry]
name = "mydata-agent"
version = "0.1.0"
description = ""
authors = ["gw <geunwoo.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pydantic = "^2.8.2"
langchain = "^0.2.13"
langchain-openai = "^0.1.21"
langchain-community = "^0.2.12"
pypdf = "^4.3.1"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.8.0.post1"
tiktoken = "^0.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-ordering = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
